# KJRJMCMCMC

./: .gitignore  .pre-commit-config.yaml  Fluxes.npy  FluxesWithError.npy  LICENSE  README.md  TestFluxes.npy  TestFluxesMultiple.npy  TestTimes.npy  TestTimesMultiple.npy  Times.npy  main.py  mcmc_chain.npy  plots.py  pyproject.toml  real_data_analysis.py  runtime.py  setup.cfg  statistics_page.py
Analysis/: PositionGenerator.py  TransitPlots.py
MCMC/: data_generator.py  distribution_testing.py  main.py  mcmc.py  metropolis_hastings.py  priors.py
TransitAnalysis/: Test.ipynb  TestForData.ipynb  TransitDataExtractor.py  TransitDetector.py
sim/: Animation.py  Decorators.py  ExampleSimulation.py  FileCheck.py  FluxCalculation.py  LCDependenceOnParams.ipynb  N_body_sim.py  PositionGenerator.py  SimulateAndFlux.py  sim.py
