[tool.poetry]
name = "kjrjmcmcmc"
version = "0.1.0"
description = ""
authors = ["JonteC <106551147+JCatton@users.noreply.github.com.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.0"
pillow = "^11.0.0"
rebound = "^4.4.3"
numpy = "^2.1.2"
corner = "^2.2.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
